MB-16264: Log the individual tasks during bucket shutdown

Change-Id: I738e29148cc5d9abb380ae578a4ac728a52a1e74
Reviewed-on: http://review.couchbase.org/55282
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>
Tested-by: Trond Norbye <trond.norbye@gmail.com>